microserv-scooter/src/main/java/org/example/microservscooter/error/exception/NotFoundException.java
package org.example.microservscooter.error.exception;

public class NotFoundException extends RuntimeException{
    public NotFoundException(String message) {
        super(message);
    }
}
